Fix overlapping my-subreddit menu

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,7 +6,7 @@
     background: transparent;
     border-bottom: none;
     height: $header-height;
-    z-index: 2;
+    z-index: 4;
 
     #header-bottom-left {
         position: absolute;
